--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,4 +18,4 @@ jobs:
           script: |
             cd terpsite
             git pull
-            cp ./* ../../pub/
+            cp ./* ../../pub/ -f
