--- a/.github/workflows/clone.yml
+++ b/.github/workflows/clone.yml
@@ -16,4 +16,4 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
-            git clone https://github.com/kimboss1004/terpsite.git
+            git clone git@github.com:kimboss1004/terpsite.git
